<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<ImageView
        android:id="@+id/gatemantratitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logosmall" 
        android:background="@drawable/rectforgate"/>
<!-- <TextView   -->
<!--         android:text="@string/gatemantra"  -->
<!--         android:id="@+id/gatemantratitle" -->
<!--         android:textColor="#FFFFFF" -->
<!--         android:textSize="50dp" -->
<!--         android:layout_width="wrap_content"  -->
<!--     	android:layout_height="wrap_content" -->
<!--         android:gravity="center" -->
<!--         android:layout_centerHorizontal="true" -->
<!--         android:background="@drawable/rectforgate" /> -->


<TextView  
        android:text="@string/algorithms" 
        android:id="@+id/algorithms"
        android:textSize="20dp"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/gatemantratitle"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />
<TextView  
        android:text="@string/compiler" 
        android:id="@+id/compiler"
        android:textSize="20dp"
        android:layout_below="@+id/algorithms"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />
<TextView  
        android:text="@string/comptrorganisation" 
        android:id="@+id/comptrorganisation"
        android:textSize="20dp"
        android:layout_below="@+id/compiler"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />
<TextView  
        android:text="@string/datastructures" 
        android:id="@+id/datastructures"
        android:textSize="20dp"
        android:layout_below="@+id/comptrorganisation"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />
<TextView  
        android:text="@string/db" 
        android:id="@+id/db"
        android:textSize="20dp"
        android:layout_below="@+id/datastructures"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />
<TextView  
        android:text="@string/digital" 
        android:id="@+id/digital"
        android:textSize="20dp"
        android:layout_below="@+id/db"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />

<TextView  
        android:text="@string/engmath" 
        android:id="@+id/engmath"
        android:textSize="20dp"
        android:layout_below="@+id/digital"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />
<TextView  
        android:text="@string/netwrks" 
        android:id="@+id/netwrks"
        android:textSize="20dp"
        android:layout_below="@+id/engmath"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />
<TextView  
        android:text="@string/os" 
        android:id="@+id/os"
        android:textSize="20dp"
        android:layout_below="@+id/netwrks"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />
<TextView  
        android:text="@string/sweng" 
        android:id="@+id/sweng"
        android:textSize="20dp"
        android:layout_below="@+id/os"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />
<TextView  
        android:text="@string/toc" 
        android:id="@+id/toc"
        android:textSize="20dp"
        android:layout_below="@+id/sweng"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />
<TextView  
        android:text="@string/web" 
        android:id="@+id/web"
        android:textSize="20dp"
        android:layout_below="@+id/toc"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />
<TextView  
        android:text="@string/randomtest" 
        android:id="@+id/randomtest"
        android:textSize="20dp"
        android:layout_below="@+id/web"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />
</RelativeLayout>
</ScrollView>