<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background">
<TableLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
    <TableRow 
	    android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center_horizontal"> 
    <ImageView
        android:id="@+id/gatemantratitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logosmall" 
        android:background="@drawable/rectforgate"/>
    </TableRow>
    
    <TableRow 
	    android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center_horizontal"> 
		
        <TextView 
            android:id="@+id/syl_dig" 
            android:text="@string/syl_dig"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:padding="20dip"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="textStart"
            />
        
        </TableRow>
        
        <TableRow 
	    android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center_horizontal">
        <TextView 
            android:id="@+id/syl_cod" 
            android:text="@string/syl_cod"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:padding="20dip"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="textStart"
            />
        </TableRow>
        <TableRow 
	    android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center_horizontal">
        
        <TextView 
            android:id="@+id/syl_datastructure" 
            android:text="@string/syl_datastructure"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:padding="20dip"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="textStart"
            />
        </TableRow>
        <TableRow 
	    android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center_horizontal">
        <TextView 
            android:id="@+id/syl_algorithms" 
            android:text="@string/syl_algorithms"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:padding="20dip"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="textStart"
            />
        
        </TableRow>
        <TableRow 
	    android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center_horizontal">
        <TextView 
            android:id="@+id/syl_toc" 
            android:text="@string/syl_toc"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:padding="20dip"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="textStart"
            />
        
        </TableRow>
        <TableRow 
	    android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center_horizontal">
        <TextView 
            android:id="@+id/syl_compiler" 
            android:text="@string/syl_compiler"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:padding="20dip"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="textStart"
            />
        </TableRow>
        
        <TableRow 
	    android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center_horizontal">
        <TextView 
            android:id="@+id/syl_os" 
            android:text="@string/syl_os"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:padding="20dip"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="textStart"
            />
        </TableRow>
        <TableRow 
	    android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center_horizontal">
        <TextView 
            android:id="@+id/syl_db" 
            android:text="@string/syl_db"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:padding="20dip"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="textStart"
            />
        </TableRow>
        
        <TableRow 
	    android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center_horizontal">
        <TextView 
            android:id="@+id/syl_softwareengg" 
            android:text="@string/syl_softwareengg"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:padding="20dip"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="textStart"
            />
        
        </TableRow>
        <TableRow 
	    android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center_horizontal">
        <TextView 
            android:id="@+id/syl_networks" 
            android:text="@string/syl_networks"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:padding="20dip"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="textStart"
            />
           
        </TableRow>
        <TableRow 
	    android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center_horizontal">
		<TextView 
            android:id="@+id/syl_web" 
            android:text="@string/syl_web"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:padding="20dip"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="textStart"
            />
		
		
		</TableRow>
		<TableRow 
	    android:layout_height="wrap_content" 
        android:layout_width="match_parent" 
        android:gravity="center_horizontal">
		<TextView 
            android:id="@+id/syl_maths" 
            android:text="@string/syl_maths"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:textColor="#000000"
            android:padding="20dip"
            android:gravity="start"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="textStart"
            />
	</TableRow>
    
</TableLayout>
</ScrollView>