<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

<ImageView
        android:id="@+id/gatemantratitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logosmall" 
        android:background="@drawable/rectforgate"/>
<!-- <TextView   -->
<!--         android:text="@string/gatemantra"  -->
<!--         android:id="@+id/gatemantratitle" -->
<!--         android:textColor="#FFFFFF" -->
<!--         android:textSize="50dp" -->
<!--         android:layout_width="wrap_content"  -->
<!--     	android:layout_height="wrap_content" -->
<!--         android:gravity="center" -->
<!--         android:layout_centerHorizontal="true" -->
<!--         android:background="@drawable/rectforgate" /> -->


<TextView  
        android:text="@string/syllabus" 
        android:id="@+id/syllabus"
        android:textSize="20sp"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/gatemantratitle"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />

<TextView  
        android:text="@string/prepare" 
        android:id="@+id/prepare"
        android:textSize="20sp"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/syllabus"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />

<TextView  
        android:text="@string/samplematerial" 
        android:id="@+id/samplematerial"
        android:textSize="20sp"
        android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/prepare"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blackbutton" />

</RelativeLayout>
</ScrollView>